# EmbeddedSoftwareMCU

./: InstallGcc.sh  readme.md
Common/: common.c  common.h
FreeRTOS/Source/: tasks.c
HardwareDriver/: AS5600.c  AS5600.h  bmi088.c  bmi088.h  ist8310.c  ist8310.h
Project/AT32F403ACGU7-Test/: Makefile  main.c
Project/AT32F403ACGU7-Test-Cmake/: CMakeLists.txt  flash.jlink  main.c
Project/Field-OrientedControl/: .mxproject  Field-OrientedControl.ioc  Makefile
Project/Field-OrientedControl-AT32/: Makefile  flash.jlink  main.c
Project/Field-OrientedControl-AT32/Core/Inc/: at32f403a_407_board.h
Project/Field-OrientedControl-AT32/Core/Src/: at32f403a_407_board.c  at32f403a_407_int.c
Project/Field-OrientedControl-V2.0/: Makefile
Project/Field-OrientedControl-V2.0/Core/Src/: adc.c  main.c  stm32f1xx_it.c  tim.c
Project/Field-OrientedControl-V2.0/UserApp/: UserMain.c
Project/Field-OrientedControl/Core/Inc/: FreeRTOSConfig.h  stm32f1xx_it.h  tim.h
Project/Field-OrientedControl/Core/Src/: main.c  stm32f1xx_it.c  tim.c
Project/Field-OrientedControl/UserApp/: Main.c  Main.h  UserMain.c  UserMain.h
Project/Sentinel/: .mxproject  Makefile  STM32F407IGHx_FLASH.ld  Sentinel.ioc  flash.jlink
Project/Sentinel/Bsp/: BspCan.c  BspCan.h  BspUsart.c  BspUsart.h
Project/Sentinel/Core/Inc/: FreeRTOSConfig.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h
Project/Sentinel/Core/Src/: can.c  dma.c  gpio.c  i2c.c  main.c  spi.c  stm32f4xx_it.c  tim.c  usart.c
Project/Sentinel/DJI_Judge/: Judge_CRC.c  Judge_CRC.h  Judge_Data.c  Judge_Data.h  usart_judge.c  usart_judge.h
Project/Sentinel/USB_DEVICE/App/: usbd_cdc_if.c
Project/Sentinel/UserApp/: Holder.c  Holder.h  InsTask.c  InsTask.h  Shoot.c  Shoot.h  UserMain.c  UserMain.h
Project/TestAssistant/: .gitignore  Makefile  TestAssistant.ioc  flash.jlink
Project/TestAssistant/App/: UserMain.c  UserMain.h
Project/TestAssistant/Core/Inc/: stm32f1xx_hal_conf.h  stm32f1xx_it.h
Project/TestAssistant/Core/Src/: adc.c  gpio.c  main.c  stm32f1xx_it.c  tim.c
SoftwareLib/AHRS/: AHRS_MiddleWare.c  AHRS_MiddleWare.h
SoftwareLib/Foc/: clarke.c  clarke.h  ipark.c  ipark.h  park.c  park.h  svpwm.c  svpwm.h
SoftwareLib/IQmath/: IQmathLib.h
SoftwareLib/Pid/: Pid.c  Pid.h
SoftwareLib/SimpleFOC/: BLDCMotor.c  BLDCMotor.h  FOCMotor.c  FOCMotor.h  Foc.c  Foc.h  foc_utils.c  foc_utils.h
Tools/: GccArm.cmake
Tools/gcc-arm-none-eabi-unix/arm-none-eabi/lib/: libstdc++.a-gdb.py
Tools/gcc-arm-none-eabi-unix/arm-none-eabi/lib/hard/: libstdc++.a-gdb.py
Tools/gcc-arm-none-eabi-unix/arm-none-eabi/lib/ldscripts/: armelf.x  armelf.xbn  armelf.xc  armelf.xd  armelf.xdc  armelf.xdw  armelf.xn  armelf.xs  armelf.xsc  armelf.xsw  armelf.xw
Tools/gcc-arm-none-eabi-unix/arm-none-eabi/lib/thumb/: libstdc++.a-gdb.py
Tools/gcc-arm-none-eabi-unix/arm-none-eabi/lib/thumb/v6-m/: libstdc++.a-gdb.py
Tools/gcc-arm-none-eabi-unix/arm-none-eabi/lib/thumb/v7-ar/: libstdc++.a-gdb.py
Tools/gcc-arm-none-eabi-unix/arm-none-eabi/lib/thumb/v7-m/: libstdc++.a-gdb.py
Tools/gcc-arm-none-eabi-unix/arm-none-eabi/lib/thumb/v7e-m/: libstdc++.a-gdb.py
Tools/gcc-arm-none-eabi-unix/arm-none-eabi/lib/thumb/v8-m.base/: libstdc++.a-gdb.py
Tools/gcc-arm-none-eabi-unix/lib/: libcc1.so.0.0.0
Tools/gcc-arm-none-eabi-unix/share/doc/gcc-arm-none-eabi/: release.txt
Tools/gcc-arm-none-eabi-win/share/doc/gcc-arm-none-eabi/: readme.txt  release.txt
(+351 files in other folders)
